--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 <link href="https://cdn.jsdelivr.net/npm/daisyui@2.24.0/dist/full.css" rel="stylesheet" type="text/css" />
 <script src="https://cdn.tailwindcss.com"></script>
 
-    <title>React App</title>
+    <title>HelpGuard</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
